# ssi

./: .env.cachepot.local  .gitignore  .ignore  CODEOWNERS  Cargo.toml  Cross.toml  Makefile.toml  README.md  build-ffi.sh  flake.nix  rustfmt.toml
.github/actions/rust-setup/: action.yaml
.github/workflows/: build.yaml  data_integrity_spec_test.yaml  linting.yaml  release.yaml  release_ffi.yaml  vc_model_spec_test.yaml
cli/: Cargo.toml
cli/src/: main.rs
container/: deps.sh
core/: Cargo.toml
core/src/: credential.rs  error.rs  identity.rs  lib.rs  presentation.rs  proof.rs  signer.rs
core/src/credential/: validation.rs
core/src/proof/: normalization.rs  signer.rs
ephemeral_registry/: Cargo.toml
ephemeral_registry/src/: lib.rs
ephemeral_resolver/: Cargo.toml
ephemeral_resolver/src/: lib.rs
ffi/: Cargo.toml
ffi/headers/: ssi_ffi.h
ffi/src/: did.rs  error.rs  lib.rs  logger.rs  registry.rs  vc.rs
ffi/tests-c/: main.c
identity/: Cargo.toml
identity/src/: identity.rs  lib.rs
registry-resolver/: Cargo.toml  buf.gen.yaml  build.rs
registry-resolver/proto/: registry.proto
registry-resolver/src/: lib.rs
registry-resolver/src/registry_client/: mod.rs
registry_resolver/: Cargo.toml  buf.gen.yaml  build.rs  protofetch.toml
registry_resolver/protos/registry-mgmt/registry_api/v1/: registry.proto
registry_resolver/src/: lib.rs  registry_client.rs
signature/: Cargo.toml
signature/src/: error.rs  keypair.rs  lib.rs  signer.rs  suite.rs  verifier.rs
signature/src/signer/: ed25519_signer_2020.rs
signature/src/suite/: ed25519_2020.rs  error.rs
signature/src/suite/ed25519_2020/: error.rs
signature/src/verifier/: ed25519_verifier_2020.rs
src/: credential.rs  lib.rs
ssi/: Cargo.toml
ssi-signature/: Cargo.toml
ssi-signature/src/: error.rs  signer.rs  suite.rs  verifier.rs
ssi/src/: lib.rs
tests/vc_model_spec_test/: config.json
