[workspace]
members = [
	"core",
	"registry_resolver",
	"signature",
	"ssi",
	"ephemeral_resolver",
	"ffi"
]

[workspace.package]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.66"
async-trait = "0.1.53"
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.10", features = ["derive", "env", "wrap_help", "cargo"] }
const-str = "0.4.3"
error-stack = { version = "0.2.4", features = ["std", "pretty-print", "spantrace"] }
futures = { version = "0.3.21", default-features = false }
futures-util = "0.3.21"
mockall = { version = "0.11.2" }
multibase = "0.9.0"
prost = "0.11.0"
prost-types = "0.11.0"
rust_decimal = "1.26.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
signature = "1.6.4"
sled = "0.34.7"
thiserror = "1.0.37"
tiny-bip39 = "0.8.2"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tonic = "0.8.2"
tonic-health = "0.7.1"
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-test = "0.2.2"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
