[workspace]
members = [
	"core",
	"registry_resolver",
	"signature",
	"ssi",
	"ephemeral_resolver",
	"ffi"
]

[workspace.package]
version = "0.4.0"
edition = "2021"

[workspace.dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.21", default-features = false }
mockall = { version = "0.11.2" }
multibase = "0.9.0"
prost = "0.11.0"
prost-types = "0.11.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
signature = "1.6.4"
thiserror = "1.0.37"
tiny-bip39 = "0.8.2"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
tonic = { version = "0.9.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tracing = "0.1.34"
tracing-error = "0.2.0"
tracing-test = "0.2.2"
uuid = { version = "1.2.1", features = ["v4", "serde"] }
bigerror = { git = "https://github.com/knox-networks/bigerror", rev = "5a42952"}
