[workspace.package]
version = "0.4.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
	"core",
	"registry_resolver",
	"signature",
	"ssi",
	"ephemeral_resolver",
	"ffi"
]


[workspace.dependencies]
base64 = "0.13.1"
chrono = { version = "0.4.19", features = ["serde"] }
futures = { version = "0.3.28", default-features = false }
mockall = { version = "0.11.4" }
multibase = "0.9.1"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signature = "1.6.4"
thiserror = "1.0.48"
tiny-bip39 = "0.8.2"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = { version = "0.9.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-test = "0.2.4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
bigerror = { git = "https://github.com/knox-networks/bigerror", rev = "5a42952"}
