[package]
name = "ephemeral_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssi_core = { path = "../core" }
async-trait = "0.1.53"
serde_json = "1.0.81"
tokio = { version = "1.12.2", features = ["full"] }
