[package]
name = "ephemeral_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssi_core = { path = "../core" }
async-trait = "0.1.53"
serde_json = {workspace = true}
tokio = { workspace = true }
chrono.workspace = true


[dev-dependencies]
tokio-test = "0.4.2"

[features]
static = []
