[package]
name = "ffi_ssi"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json = "1.0.81"
safer-ffi = { version = "0.0.7", features = ["proc_macros", "log", "out-refs"] }
registry_resolver = {path = "../registry_resolver"}
ssi_core = { path = "../core" }
signature = { path = "../signature" }
ephemeral_resolver = {path = "../ephemeral_resolver"}
tokio = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[features]
c-headers = ["safer-ffi/headers"]
