[package]
name = "registry-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.1"
prost-types = "0.10.1"
tonic = "0.7.1"
tonic-health = "0.6.0"
ssi = {path = "../core"}
serde_json = "1.0.81"

[build-dependencies]
tonic-build = {version= "0.7.0", features=["prost"]}
prost-build = "0.10.1"

