[package]
name = "registry-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.1"
prost-types = "0.10.1"
tonic = { version = "0.7.1", features = ["compression"] }
ssi = {path = "../core"}
serde_json = "1.0.81"
signature = "1.5.0"
map = "0.0.0"
serde = { version = "1.0", features = ["derive"] }