[package]
name = "registry_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "registry_resolver"

[dependencies]
prost = "0.10.1"
prost-types = "0.10.1"
tonic = { version = "0.7.1", features = ["compression"] }
ssi = {path = "../core"}
serde_json = "1.0.81"
pbjson = "0.3"
pbjson-types = "0.3"
async-trait = "0.1.53"
mockall = "0.11.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.15.0"
tokio-test = "0.4.2"
