[package]
name = "registry_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"
tonic = { version = "0.8.2", features = ["tls", "tls-roots", "tls-webpki-roots"] }
ssi_core = { path = "../core" }
serde_json = "1.0.81"
pbjson-types = "0.5.0"
async-trait = "0.1.53"
mockall = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
rstest = "0.15.0"
tokio-test = "0.4.2"

[features]
static = []
ci_ffi_build=[]
