[package]
name = "registry_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
prost = "0.11.0"
prost-types = "0.11.0"
ssi_core = { path = "../core" }
serde_json = {workspace = true}
pbjson-types = "0.5.0"
async-trait = "0.1.53"
mockall = {workspace = true}
serde = {workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono.workspace = true

[dev-dependencies]
rstest = "0.15.0"
tokio-test = "0.4.2"

[features]
static = []
ci_ffi_build=[]
