[package]
name = "registry_resolver"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
prost = "0.11.9"
prost-types = "0.11.9"
ssi_core = { path = "../core" }
serde_json = {workspace = true}
pbjson-types = "0.5.1"
async-trait = "0.1.73"
mockall = {workspace = true}
serde = {workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono.workspace = true

[dev-dependencies]
rstest = "0.15.0"
tokio-test = "0.4.3"

[build-dependencies]
tonic-build = "0.8.4"
bigerror.workspace = true

[features]
static = []
ci_ffi_build=[]
