[package]
name = "signature"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-zebra = "3.0.0"
multibase = {workspace = true}
rand = "0.8.5"
tiny-bip39 = "1.0"
thiserror = {workspace = true}
serde = { workspace = true }
sha2 = {workspace = true}

[features]
static = []
