[package]
name = "signature"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-zebra = "4.0"
multibase = "0.9.1"
rand = "0.8.5"
tiny-bip39.workspace = true
thiserror = {workspace = true}
serde = { workspace = true }
sha2 = "0.10.2"

[features]
static = []
