[package]
name = "ssi"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssi_core = {path = "../core"}
registry_resolver = {path = "../registry_resolver"}
signature = {path = "../signature"}
ephemeral_resolver = {path = "../ephemeral_resolver"}
